--- a/src/EventPlanning.Infrastructure/EventPlanning.Infrastructure.csproj
+++ b/src/EventPlanning.Infrastructure/EventPlanning.Infrastructure.csproj
@@ -1,5 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+  <PropertyGroup>
+    <TargetFramework>net10.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <FrameworkReference Include="Microsoft.AspNetCore.App" />
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\EventPlanning.Application\EventPlanning.Application.csproj" />
     <ProjectReference Include="..\EventPlanning.Domain\EventPlanning.Domain.csproj" />
@@ -13,11 +22,5 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
   </ItemGroup>
-
-  <PropertyGroup>
-    <TargetFramework>net10.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
 
 </Project>
