--- a/src/EventPlanning.Web/EventPlanning.Web.csproj
+++ b/src/EventPlanning.Web/EventPlanning.Web.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <ItemGroup>
     <ProjectReference Include="..\EventPlanning.Application\EventPlanning.Application.csproj" />
@@ -17,6 +17,7 @@
     <TargetFramework>net10.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>7c777e7c-231e-49cf-8ce2-afd3f29ab869</UserSecretsId>
   </PropertyGroup>
 
 </Project>
