--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,7 @@ jobs:
       with:
         dotnet-version: 10.0.x
         cache: true
+        cache-dependency-path: 'src/**/*.csproj'
 
     - name: Restore dependencies
       run: dotnet restore EventPlanningSystem.slnx
