--- a/src/EventPlanning.Web/appsettings.json
+++ b/src/EventPlanning.Web/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "EmailSettings": {
+    "Server": "smtp.gmail.com",
+    "Port": 587,
+    "SenderName": "Stanza Team",
+    "SenderEmail": "",
+    "Username": "",
+    "Password": ""
+  },
+  "ConnectionStrings": {}
 }
