Implement Double Opt-In security and cleanup code

--- a/src/EventPlanning.Web/appsettings.json
+++ b/src/EventPlanning.Web/appsettings.json
@@ -12,7 +12,8 @@
     "SenderName": "Stanza Team",
     "SenderEmail": "",
     "Username": "",
-    "Password": ""
+    "Password": "",
+    "BaseUrl": "https://localhost:7073"
   },
   "ConnectionStrings": {}
 }
