--- a/src/EventPlanning.Web/appsettings.json
+++ b/src/EventPlanning.Web/appsettings.json
@@ -33,37 +33,6 @@
   },
   "ConnectionStrings": {},
   "CountrySettings": {
-    "SupportedCountries": [
-      {
-        "Code": "+380",
-        "Flag": "🇺🇦",
-        "Name": "Ukraine"
-      },
-      {
-        "Code": "+1",
-        "Flag": "🇺🇸",
-        "Name": "USA"
-      },
-      {
-        "Code": "+1",
-        "Flag": "🇨🇦",
-        "Name": "Canada"
-      },
-      {
-        "Code": "+44",
-        "Flag": "🇬🇧",
-        "Name": "UK"
-      },
-      {
-        "Code": "+49",
-        "Flag": "🇩🇪",
-        "Name": "Germany"
-      },
-      {
-        "Code": "+48",
-        "Flag": "🇵🇱",
-        "Name": "Poland"
-      }
-    ]
+    "FilePath": "countries.json"
   }
 }
