refactor(domain): standardize User Identity with Guid v7, clean up infra, and fix routing/LINQ issues

--- a/src/EventPlanning.Web/EventPlanning.Web.csproj
+++ b/src/EventPlanning.Web/EventPlanning.Web.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <Folder Include="Areas\Admin\Views\Shared\" />
+    <Folder Include="logs\" />
   </ItemGroup>
 
   <ItemGroup>
