fix: finalize Docker setup and resolve connection issues

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 MSSQL_SA_PASSWORD=ChangeMe123!
 # Connection string uses the internal container name 'db' and the password above.
 # If you change the password above, you must also update it in the connection string below.
-ConnectionStrings__DefaultConnection=Server=db;Database=EventPlanningDb;User Id=sa;Password=ChangeMe123!;TrustServerCertificate=True;
+ConnectionStrings__DefaultConnection="Server=db;Database=EventPlanningDb;User Id=sa;Password=ChangeMe123!;TrustServerCertificate=True"
 
 # Seeding Credentials (Required for first run)
 Seed__AdminEmail=admin@stanza.com
