fix(infra): resolve data protection path permission issues in CI
Remove hardcoded fallback for Data Protection path to prevent CI permission errors.

Configure DataProtection__KeyRingPath in docker-compose.yml for production.

Fix startup crash in integration tests due to duplicate config key.

Add missing namespace in CustomWebApplicationFactory.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,8 @@ services:
       - EmailSettings__SenderEmail=${EmailSettings__SenderEmail}
       - EmailSettings__Username=${EmailSettings__Username}
       - EmailSettings__Password=${EmailSettings__Password}
+      # Data Protection
+      - DataProtection__KeyRingPath=/app/keys/DataProtection-Keys
     ports:
       - "8080:8080"
     volumes:
